Cooperation with Da Vinci has been finished. CSS looks a little bit better. Need to do some language changes, js notifications and block some endpoints.

--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -2,46 +2,32 @@ body {
     background: linear-gradient(to right, rgba(255,253,208,1) 0%, rgba(255,255,245,1) 54%, rgba(255,253,208,1) 100%)fixed;
 }
 
-.container {
-    display: grid;
+.col-6{
+    margin: 5% 0 0 0;
+}
+
+.col-6 .form{
+    margin: 1% 1% 1% 1%;
+}
+
+.col-3{
+    text-align: right;
+}
+
+.background{
     background: linear-gradient(180deg, #AAAAAA 0%, #DCDCDC 51.04%, #AAAAAA 100%);
-    grid-template-columns: 3fr 2fr 3fr;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-            ". form .";
-    width: 100%;
-    height: 100%;
-    margin: 1.5% 0 3% 0;
-}
-
-.form {
-    text-align: center;
-    grid-area: form;
     color: #000000;
     border-radius: 10px;
     border-style: solid;
     border-width: 3px;
 }
 
-.fileList {
-    text-align: center;
-    grid-area: form;
-    color: #000000;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 3px;
-}
-
-.file {
-    grid-area: form;
-    text-align: center;
-}
-
-.title {
+.title{
     background: #727272;
+    text-align: center;
     border-radius: 5px 5px 0 0;
     padding: 5px;
     color: whitesmoke;
     text-shadow: 4px 4px black;
-    margin: 0 0 2.5% 0;
+    margin: 0 0 0 0;
 }
