--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Repozytorium plików</title>
+    <script type=text/javascript src="{{url_for('static', filename='js/index.js')}}"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css"  href="../static/css/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -32,7 +33,7 @@
             </div>
             <div class="col-3">
                 <div class="info">
-                    You are now logged in as: {{ uid }}
+                    Jesteś zalogowany jako: {{ uid }}
                     <a href="/logout">(Wyloguj)</a>
                 </div>
             </div>
